<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="4"
    android:rowCount="6"
    android:layout_columnWeight="4"
    android:layout_rowWeight="6"
    tools:context="com.jerome.calcul.MainActivity">

    <TextView
        android:id="@+id/text_result"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="3"
        android:layout_columnSpan="3"
        android:gravity="end|center_vertical"
        android:layout_margin="5sp"
        android:padding="5sp"
        android:background="@color/primary_text"
        android:textColor="@color/icons"
        android:text="@string/calc_default_value" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:tag="C"
        android:text="@string/calc_clear" />

    <fragment
        android:name="com.jerome.calcul.NormalFragment"
        android:id="@+id/fragmentNormal"
        android:layout_rowWeight="4"
        android:layout_columnWeight="4"
        android:layout_columnSpan="4"
        android:layout_rowSpan="4"
        android:layout_height="0dp"
        android:layout_width="0dp" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:layout_columnWeight="4"
        android:tag="="
        android:text="@string/calc_equal" />
</GridLayout>
