<resources>
    <string name="app_name">CalcUL</string>
    <string name="calc_default_value">0</string>
    <string name="calc_clear">C</string>
    <string name="calc_zero">0</string>
    <string name="calc_one">1</string>
    <string name="calc_two">2</string>
    <string name="calc_three">3</string>
    <string name="calc_four">4</string>
    <string name="calc_five">5</string>
    <string name="calc_six">6</string>
    <string name="calc_seven">7</string>
    <string name="calc_eight">8</string>
    <string name="calc_nine">9</string>
    <string name="calc_decimal_separator">.</string>
    <string name="calc_divider">/</string>
    <string name="calc_multiplier">X</string>
    <string name="calc_minus">-</string>
    <string name="calc_plus">+</string>
    <string name="calc_equal">=</string>
    <string name="calc_division_by_zero">Division by zero!</string>
    <string name="calc_sin">sin</string>
    <string name="calc_cos">cos</string>
    <string name="calc_tan">tan</string>
    <string name="x_calc_pow_2">x^2</string>
    <string name="calc_sin_inv">sin-1</string>
    <string name="calc_cos_inv">cos-1</string>
    <string name="calc_tan_inv">tan-1</string>
    <string name="calc_x_pow_3">x^3</string>
    <string name="calc_e_pow_x">e^x</string>
    <string name="calc_10_pow_x">10^x</string>
    <string name="calc_1_div_x">1/x</string>
    <string name="calc_x_pow_y">x^y</string>
    <string name="calc_ln">ln</string>
    <string name="calc_log">log</string>
    <string name="calc_sqrt">sqrt</string>
    <string name="calc_plus_minus">+/-</string>
    <string name="calc_theme1">Thème 1</string>
    <string name="calc_theme2">Thème 2</string>
    <string name="calc_theme3">Thème 3</string>
    <string name="calc_theme4">Thème 4</string>
</resources>
