...
    android:padding="0dp"
    android:layout_margin="0dp"
    android:rowCount="4"
    tools:context="com.jerome.calcul.MainActivity">

    <Button
        android:id="@+id/btn_sin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_rowWeight="1"
        android:textSize="15dp"
...
